--- a/ts-config-service/src/main/resources/application.yml
+++ b/ts-config-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ts-config-service
   datasource:
-    url: jdbc:mysql://${CONFIG_MYSQL_HOST:ts-config-mysql}:${CONFIG_MYSQL_PORT:3306}/${CONFIG_MYSQL_DATABASE:ts}?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${CONFIG_MYSQL_HOST:ts-config-mysql}:${CONFIG_MYSQL_PORT:3306}/${CONFIG_MYSQL_DATABASE:ts}?useSSL=false&serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&allowPublicKeyRetrieval=true&useSSL=false
     username: ${CONFIG_MYSQL_USER:root}
     password: ${CONFIG_MYSQL_PASSWORD:Abc123%}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -17,6 +17,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://ts-discovery-service:8761/eureka/
+      preferIpAddress: true
 
 # HTTP Server
 server:
